--- a/sidepanel.html
+++ b/sidepanel.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="/src/sidepanel/main.js"></script>
+  <script type="module" src="/src/v3/sidepanel/main.js"></script>
 </body>
 </html>
